--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "husky": "1.3.1",
+    "json-server": "^0.17.0",
     "lint-staged": "8.1.5",
     "react": "^16.14.0",
     "react-datepicker": "^3.0.0",
@@ -21,10 +22,14 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.35.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p server:*",
+    "server:api": "node server.js",
+    "server:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
@@ -70,6 +75,8 @@
     "jest-prop-type-error": "^1.1.0",
     "jest-resolve": "^26.6.0",
     "jest-watch-typeahead": "^0.3.1",
-    "react-test-renderer": "^16.8.6"
+    "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.8.6",
+    "webpack-cli": "^4.9.0"
   }
 }
